--- a/src/components/thing/create-edit-thing.html
+++ b/src/components/thing/create-edit-thing.html
@@ -16,7 +16,7 @@
     <md-content layout-margin="20px" layout-padding>
       <md-card layout-padding>
         <div flex>
-          <form name="thingForm" novalidate>
+          <form name="thingForm" enctype="multipart/form-data" novalidate >
             <md-input-container class="md-block">
               <label>Descrição</label>
               <input ng-disabled = "currentUserKind == 'COMUM'" type="text" name="description" ng-model="thing.description" md-maxlenght="150" rows="5" md-select-on-focus="" required>
@@ -88,6 +88,16 @@
                 <label>Comentários</label>
                 <input ng-disabled = "currentUserKind == 'COMUM'" type="text" ng-model="thing.comments" md-maxlength="75" md-select-on-focus="">
               </md-input-container>
+            </div>
+
+            <div>
+              <input id="imageThing" type="file" name="image" ng-model="thing.image">
+            </div>
+
+            <br>
+
+            <div>
+              <a href="#">Ver foto do Objeto</a>
             </div>
 
             <!-- esconder esses botoes do usuario comum -->
